<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="viewModel"
			type="com.strv.dundee.ui.auth.SignInViewModel" />

		<variable
			name="view"
			type="com.strv.dundee.ui.auth.SignInView" />


	</data>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:background="@color/primary"
			android:theme="@style/ThemeOverlay.Dundee.Dark"
			android:padding="@dimen/spacing_32">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:textAppearance="@style/TextAppearance.AppCompat.Display3"
				android:textColor="@color/white"
				android:text="@string/app_name" />

			<Space
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1" />

			<!-- Focus Catcher -->
			<LinearLayout
				android:layout_width="0px"
				android:layout_height="0px"
				android:focusable="true"
				android:focusableInTouchMode="true" />

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/global_email"
					android:imeOptions="actionNext|flagNoExtractUi"
					android:inputType="textEmailAddress"
					android:text="@={viewModel.email}" />

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_16"
				app:passwordToggleEnabled="true">

				<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/global_password"
					android:fontFamily="sans-serif"
					android:imeOptions="actionDone|flagNoExtractUi"
					android:inputType="textPassword"
					android:text="@={viewModel.password}"
					app:onActionDoneCallback="@{() -> viewModel.signIn()}" />

			</android.support.design.widget.TextInputLayout>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_16"
				android:layout_gravity="center"
				android:text="@string/onboarding_sign_in"
				android:paddingTop="@dimen/spacing_20"
				android:paddingBottom="@dimen/spacing_20"
				android:enabled="@{viewModel.formValid &amp;&amp; !viewModel.progress}"
				android:onClick="@{() -> viewModel.signIn()}"
				style="@style/Widget.AppCompat.Button.Colored"
				tools:text="@string/onboarding_sign_in" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_margin="@dimen/spacing_8"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
				android:textColor="@color/white"
				android:text="@string/onboarding_sign_in_or" />

			<com.google.android.gms.common.SignInButton
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:onClickListener="@{() -> viewModel.signInWithGoogle()}"
				app:buttonSize="wide" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_4"
				android:layout_gravity="center_horizontal"
				android:padding="@dimen/spacing_16"
				tools:text="@string/onboarding_sign_in_sign_up"
				app:htmlText="@{@string/onboarding_sign_in_sign_up}"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
				android:onClick="@{() -> view.openSignUp()}"
				android:background="?android:selectableItemBackground" />

			<ProgressBar
				android:layout_width="@dimen/spacing_24"
				android:layout_height="@dimen/spacing_24"
				android:layout_gravity="center"
				android:layout_margin="@dimen/spacing_16"
				app:invisible="@{!viewModel.progress}" />


			<Space
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1" />

		</LinearLayout>

	</ScrollView>

</layout>

