<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>

	<data>

		<import type="com.strv.dundee.model.entity.Coin" />
		<import type="com.strv.dundee.common.DateUtils" />

		<variable
			name="viewModel"
			type="com.strv.dundee.ui.wallet.EditWalletAmountViewModel" />

		<variable
			name="view"
			type="com.strv.dundee.ui.wallet.EditWalletAmountView" />


	</data>

	<android.support.design.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:elevation="0dp">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize" />
		</android.support.design.widget.AppBarLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="@dimen/spacing_32"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<android.support.design.widget.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1">

					<android.support.design.widget.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/investments_amount"
						android:imeOptions="actionDone|flagNoExtractUi"
						android:inputType="numberDecimal"
						android:text="@={viewModel.amount}" />

				</android.support.design.widget.TextInputLayout>

				<Spinner
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/spacing_16"
					android:layout_gravity="center_vertical"
					app:adapter="@{viewModel.coinAdapter}"
					app:selection="@={viewModel.coin}" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<android.support.design.widget.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1">

					<android.support.design.widget.TextInputEditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/investments_bought_for"
						android:imeOptions="actionDone|flagNoExtractUi"
						android:inputType="numberDecimal"
						android:text="@={viewModel.boughtFor}" />

				</android.support.design.widget.TextInputLayout>

				<Spinner
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/spacing_16"
					android:layout_gravity="center_vertical"
					app:adapter="@{viewModel.currencyAdapter}"
					app:selection="@={viewModel.currency}" />

			</LinearLayout>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/investments_bought_on"
					android:inputType="none"
					android:focusableInTouchMode="false"
					android:lines="1"
					android:onClick="@{() -> view.pickBoughtDate()}"
					android:text="@{DateUtils.INSTANCE.dateToDayString(viewModel.boughtOn)}" />

			</android.support.design.widget.TextInputLayout>

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_32">

				<Button
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:text='@{!viewModel.progress ? @string/global_save : ""}'
					android:paddingTop="@dimen/spacing_20"
					android:paddingBottom="@dimen/spacing_20"
					android:enabled="@{viewModel.amountValid &amp;&amp; !viewModel.progress}"
					android:onClick="@{() -> viewModel.saveAmount()}" />

				<ProgressBar
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					app:show="@{viewModel.progress}" />

			</FrameLayout>

		</LinearLayout>

	</android.support.design.widget.CoordinatorLayout>

</layout>

